# softRenderer

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  agent.md
apps/viewer/: CMakeLists.txt  main.cpp
assets/models/: cube.mtl
assets/models/《斩服少女》缠流子_乐图网tuei.cn/: MatoiRyuko_3.stl  MatoiRyuko_9.stl  www.tuei.cn.txt  更多3D打印模型文件下载.url
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
build-mingw/apps/viewer/: Makefile  cmake_install.cmake
build-mingw/src/: Makefile  cmake_install.cmake
docs/architecture/: project-architecture.md
docs/features/: agents-architecture-check-rule.md  camera-architecture-alignment.md  camera-interaction.md  console-fps-output.md  fixed-4x-msaa-support.md  frame-rate-optimization-pass-1.md  frame-rate-optimization-pass-2.md  frame-rate-optimization-pass-3.md  frustum-clipping-and-backface-culling.md  ibl-pbr-runtime-and-toolchain.md  indexed-mesh.md  layer-folder-and-remove-vertex-header.md  math-library-demo-foundation.md  mesh-and-draw-skeleton.md  minimal-direct-light-pbr.md  minimal-external-texture-loading.md  minimal-normals-and-lighting.md  minimal-obj-model-loading.md  minimal-programmable-pipeline.md  minimal-renderable-pipeline-triangle.md  model-space-vertex-ndc-screen-depth.md  pipeline-math-utilities-refactor.md  pipeline-stage-refactor.md  project-architecture-and-agent-governance.md  project-structure-and-cmake-design.md  stage1-layer-stack-application-refactor.md  stage2-remove-platform-and-direct-window-ownership.md  stage3-render-protocol-lit-only-refactor.md  stage4-pipeline-state-machine-refactor.md  stl-directory-model-rendering.md  texture-mapping-and-uv-support.md
src/: CMakeLists.txt
src/app/: Application.cpp  Application.h  CameraLayer.cpp  CameraLayer.h  Layer.h  LayerContext.h  LayerStack.h  RenderLayer.cpp  RenderLayer.h  SceneLayer.cpp  SceneLayer.h
src/app/layer/: CameraLayer.cpp  CameraLayer.h  Layer.h  LayerContext.h  LayerStack.h  RenderLayer.cpp  RenderLayer.h  SceneLayer.cpp  SceneLayer.h
src/base/: Math.cpp  Math.h  StateMachine.h
src/platform/: Input.h  Platform.cpp  Platform.h  Window.cpp  Window.h
src/render/: Camera.cpp  Camera.h  Color.h  EnvironmentMap.h  Framebuffer.cpp  Framebuffer.h  IblPrecompute.h  Mesh.h  Pipeline.h  PipelineMathHelper.h  PipelineStages.h  Program.h  Renderer.cpp  Renderer.h  SkyboxRenderer.h  Texture2D.h  Vertex.h  VertexTypes.h
src/render/shader/: IblPbrShader.h  Lighting.h  LitShader.h  PbrShader.h  ShaderTypes.h
src/resource/loaders/: ImageTextureLoader.cpp  ImageTextureLoader.h  ObjMeshLoader.cpp  ObjMeshLoader.h
